<resources>

    <string name="app_name">Pishtazan</string>
    <string name="google_map_api_key">AIzaSyCe3_dcTjuUlQn5-tUoCti9T4gvJZDJ9ps</string>

    <string name="EnterNationalCode">کد ملی خود را وارد نمایید</string>
    <string name="MobileNumber">تلفن همراه</string>
    <string name="EmptyMobileNumber">تلفن همراه را وارد نمایید</string>
    <string name="GetVerifyCode">دریافت کد</string>
    <string name="Cancel">بیخیال</string>
    <string name="NationalCode">کد ملی</string>
    <string name="Address">آدرس</string>
    <string name="InternetNotAvailable">اینترنت دستگاه خود را روشن کنید</string>
    <string name="VerifyCode">6 رقم کد فعال سازی را وارد نمایید</string>
    <string name="ElapsedTimeGetSMS">زمان باقیمانده\n برای دریافت پیامک</string>
    <string name="ReTryGetSMS">دریافت دوباره\n پیامک</string>
    <string name="PleaseWait">شکیبا باشید</string>
    <string name="Colleagues">همکاران</string>
    <string name="Customer">مشتری</string>
    <string name="ColleaguePanel">پنل همکاران</string>
    <string name="CustomerPanel">پنل مشتریان</string>
    <string name="Certain">قطعی</string>
    <string name="User">کاربر</string>
    <string name="Maybe">بالقوه</string>
    <string name="Possible">بالفعل</string>
    <string name="AddPerson">اضافه کردن افراد</string>
    <string name="AddFromContact">انتخاب از لیست مخاطبین</string>
    <string name="Name_LastName">نام و نام خانوادگی</string>
    <string name="Save">ذخیره</string>
    <string name="ContactIsEmpty">لیست مخاطبین شما خالی است</string>
    <string name="PhoneNumber">تلفن ثابت</string>
    <string name="SearchContact">جستجوی مخاطب</string>
    <string name="Search">جستجو</string>
    <string name="SearchName">جستجوی نام</string>
    <string name="EmptyContactName">لطفا نام شخص را وارد نمایید</string>
    <string name="ChooseAction">انتخاب عملیات</string>
    <string name="CompleteInformation">تکمیل اطلاعات</string>
    <string name="SetCallReminder">ثبت یادآوری تماس</string>
    <string name="callReminders">لیست یادآوری تماس ها</string>
    <string name="SetMeetingReminder">ثبت یادآوری جلسه</string>
    <string name="meetingReminders">لیست یادآوری جلسه ها</string>
    <string name="DeleteFromList">حذف کردن از لیست</string>
    <string name="ChooseDate">انتخاب تاریخ</string>
    <string name="ChooseTime">انتخاب ساعت</string>
    <string name="TodayDate">تاریخ امروز</string>
    <string name="Yes">بلی</string>
    <string name="AreYouSureYouWantToDeleteIt1">آیا برای حذف</string>
    <string name="AreYouSureYouWantToDeleteIt2">مطمئن هستید؟</string>
    <string name="AreYouSureYouWantToMoveIt1">آیا برای انتقال</string>
    <string name="MoveToPossible">انتقال به بالفعل</string>
    <string name="PleaseWaitingForConnectingToServer">در حال برقراری ارتباط با مرکز</string>
    <string name="PowerBy">قدرت گرفته از قلب تپنده پیشتازان</string>
    <string name="AnalyticalReport">گزارش تحلیلی</string>
    <string name="StatisticalReport">گزارش آماری</string>
    <string name="Close">بستن</string>
    <string name="DegreeNormal">عادی</string>
    <string name="DegreePeach">هلو</string>
    <string name="DegreeGiant">غول</string>
    <string name="ChoosePersonDegree">درجه شخص را انتخاب کنید</string>
    <string name="CallWith">یادآوری جهت تماس با</string>
    <string name="Clock">ساعت</string>
    <string name="MeetingWith">جلسه با</string>
    <string name="Calling">گرفتن تماس</string>
    <string name="ShowDetail">جزییات بیشتر</string>
    <string name="RemindAgain">یادآوری مجدد</string>
    <string name="GotoMeeting">بزن بریم</string>
    <string name="RequestFailure">خطای ارتباط با مرکز</string>
    |<string name="ServiceRun">برنامه در حال اجرا است</string>
    <string name="UserIsNotAuthorization">کاربری شما با خطا مواجه شده، لطفا مجدد وارد سیستم بشوید</string>
    <string name="ChooseCamera">عکس جدید</string>
    <string name="ChooseGallery">انتخاب از گالری</string>
    <string name="ChooseLocationOnMap">انتخاب مکان روی نقشه</string>
    <string name="Choose">انتخاب</string>
    <string name="OutOfIran">آدرس انتخابی خارج از ایران است</string>
    <string name="ChooseBirthDay">انتخاب تاریخ تولد</string>
    <string name="Failed">ناموفق</string>
    <string name="successful">موفق</string>
    <string name="ChoosePolicyType">انتخاب نوع پیشنویس</string>
    <string name="SearchPolicyType">جستجوی نوع پیشنویس</string>
    <string name="ChooseSeries">انتخاب نوع شماره سری</string>
    <string name="Amount">مبلغ</string>
    <string name="Payment">پرداخت</string>
    <string name="Description">توضیحات</string>
    <string name="SavePolicy">ثبت پیشنویس</string>
    <string name="EditPolicy">ویرایش پیشنویس</string>
    <string name="EditProfile">ویرایش پروفایل</string>
    <string name="EmptyAmount">مبلغ را وارد نمایید</string>
    <string name="EmptyNationalCode">کد ملی را وارد نمایید</string>
    <string name="EmptyTrackingCode">کد پیگیری را وارد نمایید</string>
    <string name="PoliciesList">لیست پیشنویس ها</string>
    <string name="InsuranceList">لیست بیمه نامه ها</string>
    <string name="AddNewPolicy">اضافه کردن پیشنویس جدید</string>
    <string name="Date">تاریخ</string>
    <string name="Title">عنوان</string>
    <string name="Type">نوع</string>
    <string name="Tutorial">آموزش</string>
    <string name="Level">سطح</string>
    <string name="MovieTime">مدت زمان</string>
    <string name="StartQuiz">شروع آزمون</string>
    <string name="ExamResult">نتایج آزمون</string>
    <string name="PreviousQuestion">سوال قبلی</string>
    <string name="NextQuestion">سوال بعدی</string>
    <string name="NewLearn">آموزش جدید</string>
    <string name="ReTryQuiz">تکرار آزمون</string>
    <string name="examHistory">تاریخچه آزمون</string>
    <string name="Minute">دقیقه</string>
    <string name="TotalQuestion">تعداد کل سوالات</string>
    <string name="CorrectAnswerCount">تعداد پاسخ درست</string>
    <string name="WrongAnswerCount">پاسخ اشتباه</string>
    <string name="NotAnswer">بدون پاسخ</string>
    <string name="AcceptancePercentage">درصد قبولی</string>
    <string name="CorrectAnswer">پاسخ درست</string>
    <string name="YourAnswer">پاسخ شما</string>
    <string name="ExamResultDetail">جزییات کارنامه</string>
    <string name="DateFrom">تاریخ از</string>
    <string name="DateTo">تا تاریخ</string>
    <string name="createReport">تهیه گزارش</string>
    <string name="RankOfCompany">انتخاب رتبه سازمانی</string>
    <string name="InstallApp">نصب نرم افزار</string>
    <string name="DownloadingFile">بارگیری فایل …</string>
    <string name="FileDownloaded">پایان بارگیری فایل</string>
    <string name="EndOfExam">پایان آزمون</string>
    <string name="QuizReport">گزارش آموزش</string>
    <string name="NewReport">گزارش جدید</string>
    <string name="SortingNeither">هیچ کدام</string>
    <string name="SortingAverageGrade">نمره</string>
    <string name="SortingTotalScore">معدل</string>
    <string name="SortingTotalActivity">عملکرد</string>
    <string name="insuredName">نام بیمه شده</string>
    <string name="Archived">بایگانی شده ها</string>
    <string name="NoArchive">بازگشت به لیست</string>
    <string name="EmptyList">لیست خالی است</string>
    <string name="ConvertToCustomer">انتقال به لیست مشتری های قطعی</string>
    <string name="ConvertToColleague">انتقال به همکاران قطعی</string>
    <string name="ConvertToUser">تبدیل به کاربر</string>
    <string name="GetPhoneNumber">دریافت شماره موبایل</string>
    <string name="Reports">گزارشات</string>
    <string name="FeeReport">گزارش کارمزد</string>
    <string name="portfoReport">گزارش بردرو و پرتفو</string>
    <string name="ChangePicture">تغییر عکس</string>
    <string name="EmptyPhoneNumber">شماره تلفن را کامل وارد نمایید</string>
    <string name="EmptyNational">شماره ملی را وارد نمایید</string>
    <string name="RemainingQuestions">سوالات باقیمانده</string>
    <string name="YouPassedTheTest">شما در آزمون قبول شدید</string>
    <string name="YouFailedTheTest">شما در آزمون رد شدید</string>
    <string name="ReTry">تلاش مجدد</string>
    <string name="LogOut">خروج از حساب</string>
    <string name="EmptyNationalCodeDialog">شما حتما باید کد ملی این مشتری را با کلیک بر روی منوی {تکمیل اطلاعات} ثبت کنید تا منوهای دیگر نمایش داده شود</string>
    <string name="insuredLastName">نام بیمه شده</string>
    <string name="insuredNationalCode">کد ملی بیمه شده</string>
    <string name="DeliveryDate">تاریخ تحویل به شعبه</string>
    <string name="TrackingCode">کد پیگیری</string>
    <string name="SeriesNumber">شماره سری</string>
    <string name="ResultTitleCall1">آیا با</string>
    <string name="ResultTitleCall2">تماس گرفته اید؟</string>
    <string name="ResultTitleMeet1">جلسه با</string>
    <string name="ResultTitleMeet2">چطور بود؟</string>
    <string name="chargeWallet">افزایش موجودی</string>
    <string name="AmountT">مبلغ (تومان)</string>
    <string name="transactions">تراکنش ها</string>
    <string name="statue">وضعیت</string>
    <string name="newReminder">یادآوری جدید</string>
    <string name="reminderDate">تاریخ یادآوری</string>
    <string name="reminderTime">ساعت یادآوری</string>
    <string name="result">نتیجه</string>
    <string name="withoutResult">بدون نتیجه</string>
    <string name="totalScore">مجموع نمره</string>
    <string name="totalPrivileges">مجموع امتیاز</string>
    <string name="toman">تومان</string>
    <string name="sortByLevel">مرتب سازی بر اساس درجه</string>
    <string name="notifications">اعلان ها</string>
    <string name="insurerName">نام بیمه گذار</string>
    <string name="insurerNational">کد ملی بیمه گذار</string>
    <string name="insurerMobile">تلفن همراه بیمه گذار</string>
    <string name="sendBirthDay">ارسال پیامک تولد</string>
    <string name="home">صفحه اصلی</string>
    <string name="id">شناسه</string>



    //___________________________ Values For SharedPreference ______________________________________
    <string name="ML_PhoneNumber">PhoneNumber</string>
    <string name="ML_PanelType">PanelType</string>
    <string name="ML_Id">Id</string>
    <string name="ML_Type">Type</string>
    <string name="ML_personId">personId</string>
    <string name="ML_Ignore">ML_Ignore</string>
    <string name="ML_Calling">ML_Calling</string>
    <string name="ML_LaterCall">ML_LaterCall</string>
    <string name="ML_LaterMeeting">ML_LaterMeeting</string>
    <string name="ML_GoToMeeting">ML_GoToMeeting</string>
    <string name="ML_Certain">ML_Certain</string>
    <string name="ML_Failed">ML_Failed</string>
    <string name="ML_Amount">ML_Amount</string>
    <string name="ML_Description">ML_Description</string>
    <string name="ML_PolicyTypeId">ML_PolicyTypeId</string>
    <string name="ML_Date">ML_Date</string>
    <string name="ML_MovieUrl">MovieUrl</string>
    <string name="ML_LastExam">LastExam</string>
    <string name="ML_ExamHistory">ExamHistory</string>
    <string name="ML_UpdateUrl">UpdateUrl</string>
    <string name="ML_UpdateFile">UpdateFile</string>
    <string name="ML_Insured">Insured</string>
    <string name="ML_InsuredNationalCode">InsuredNationalCode</string>
    <string name="ML_MyReport">MyReport</string>
    <string name="ML_MySubsetReport">MySubsetReport</string>
    <string name="ML_TutorialId">TutorialId</string>
    <string name="ML_NationalCode">NationalCode</string>
    <string name="ML_SeriesId">ML_SeriesId</string>
    <string name="ML_Wage">ML_Wage</string>
    <string name="ML_Portfo">ML_Portfo</string>
    <string name="ML_Payment">ML_Payment</string>
    <string name="ML_Name">ML_Name</string>
    <string name="ML_Title">ML_Title</string>
    <string name="ML_ImageUrl">ML_ImageUrl</string>

</resources>