<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayoutCompleteInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/CompleteInformation"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_baseline_edit"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutCallReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/callReminders"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_baseline_perm_phone"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutMeetingReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/meetingReminders"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_baseline_people"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutConvertToCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/ConvertToCustomer"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_baseline_transfer_within_a_station"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutConvertToColleague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/ConvertToColleague"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_baseline_transfer_within_a_station"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutConvertToUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/ConvertToUser"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_exchange"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutQuestionnaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/PoliciesList"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/svg_to_do_list"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutInsurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/InsuranceList"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/svg_welfare"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutNoArchived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right|center_vertical"
                android:text="@string/NoArchive"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/svg_delete_archive"
                android:tint="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutDeleteFromList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/ML_Red"
                android:gravity="right|center_vertical"
                android:text="@string/DeleteFromList"
                android:padding="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_baseline_person_add_disabled"
                android:tint="@color/ML_Red"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ML_Dialog"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/textViewActionDialog"
        fontPath="fonts/iransans_web_medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="@dimen/_5sdp"
        android:text="@string/EmptyNationalCodeDialog"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_11sdp" />

    <LinearLayout
        android:id="@+id/LinearLayoutCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/ML_Harmony">

        <TextView
            fontPath="fonts/iransans_web_medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Cancel"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>