<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:orientation="horizontal"
        android:background="@drawable/dw_back_bottom_connection"
        android:padding="@dimen/_7sdp"
        >

        <LinearLayout
            android:id="@+id/LinearLayoutCertain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                fontPath="fonts/iransans_web_medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/ML_HarmonyDark"
                android:textSize="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/Certain"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutPossible"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp">

            <TextView
                fontPath="fonts/iransans_web_medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/ML_HarmonyDark"
                android:textSize="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/Possible"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutMaybe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dw_back_recycler">

            <TextView
                fontPath="fonts/iransans_web_medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/ML_HarmonyDark"
                android:textSize="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/Maybe"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_3sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/ML_Black"
            android:text="0"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/ML_Black"
            android:text="0"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/ML_Black"
            android:text="0"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>